--- a/FoodPlanner/appsettings.json
+++ b/FoodPlanner/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "FoodPlannerContext": "Data Source=FoodPlannerContext-c0dd5d29-6fe5-4aa4-b2df-77107860d4f0.db"
+    "FoodPlannerContext": "Server=(localdb)\\mssqllocaldb;Database=FoodPlannerContext;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
